fix for wrapping filter text

--- a/styles.scss
+++ b/styles.scss
@@ -124,7 +124,6 @@ body {
                     input {
                         background-color: $very-light-gray;
                         border-style: none;
-                        border: 1px solid black;
                         color: $light-grayish-blue-day;
                         font-size: 18px;
                         width: 80%;
@@ -253,7 +252,7 @@ body {
 
                         .filter {
                             button.text {
-                                padding: 0 4px;
+                                padding: 0 3px;
                                 color: $dark-grayish-blue;
                                 font-size: 14px;
                                 font-weight: 700;
@@ -436,7 +435,7 @@ body {
 }
 
 // mobile styles
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 376px) {
 
     body {
         .pageContainer {
